refactor(core): Modernize streams and payment (#82)
- Replace .collect(Collectors.toList()) with .toList()
- Remove unused Collectors imports
- Extract payment response code check to method

Co-authored-by: KiteClass CI <kiteclass-ci@users.noreply.github.com>